--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ h4, .subsection-title {
 
 .tab-content.active {
     display: block;
+    background: linear-gradient(145deg, #0f0f0f, #1a1a1a, #0f0f0f);
 }
 
 .form-group {
